--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Lunttery</title>
     <%= csrf_meta_tags %>
 
@@ -8,7 +9,53 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body style="padding-top: 70px; ">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">選單切換</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to "Lunttery", "#", :class => "navbar-brand" %>
+        </div>
+
+        <!-- 手機隱藏選單區 -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <!-- 右選單 -->
+          <ul class="nav navbar-nav navbar-right">
+            <% if current_user %>
+              <li><%= link_to('登出', destroy_user_session_path, :method => :delete) %></li>
+              <li><%= link_to('修改密碼', edit_registration_path(:user)) %></li>
+            <% else %>
+              <li><%= link_to('註冊', new_registration_path(:user)) %></li>
+              <li><%= link_to('登入', new_session_path(:user)) %></li>
+              <li><%= link_to "登入 Facebook", "#" %></li>
+            <% end %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他功能<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "尋找餐廳", "#" %></li>
+                <li><%= link_to "尋找餐點", "#" %></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- 手機隱藏選單區結束 -->
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+
+
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
