--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             <% else %>
               <li><%= link_to('註冊', new_registration_path(:user)) %></li>
               <li><%= link_to('登入', new_session_path(:user)) %></li>
-              <li><%= link_to "登入 Facebook", "#" %></li>
+              <li><%= link_to "登入 Facebook", user_facebook_omniauth_authorize_path %></li>
             <% end %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他功能<b class="caret"></b></a>
