--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-
+          <%= notice_message %>
 
           <%= yield %>
+
         </div>
       </div>
     </div>
