--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他功能<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "尋找餐廳", "#" %></li>
+                <li><%= link_to "尋找餐廳", shops_path %></li>
                 <li><%= link_to "尋找餐點", "#" %></li>
               </ul>
             </li>
