--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @shops.each do |shop| %>
       <tr>
-        <td><%= shop.name %></td>
+        <td><%= link_to shop.name, shop_path(shop) %></td>
         <td><%= shop.phone %></td>
         <td><%= shop.address %></td>
         <td><%= shop.rate %></td>
