餐點加上標籤的多選

--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -2,6 +2,11 @@
 
 <div>名稱：<%= @meal.name %></div>
 <div>價錢：<%= @meal.price %></div>
+<div>標籤：
+  <% @meal.tags.each do |tag| %>
+    <%= tag.name %>
+  <% end %>
+</div>
 <% @meal.photos.each do |photo| %>
   <div>
     <%= image_tag photo.url %>
