--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -13,6 +13,10 @@
     <%= f.label "價錢" %>:
     <%= f.text_field :price, class: "form-control", type: "number" %>
 
+    <%= f.label "標籤" %>:
+    <%= f.collection_check_boxes(:tag_ids, Tag.where(source_type: "Meal"), :id, :name)%>
+
     <%= f.file_field :photos, multiple: true %>
 
     <%= f.submit "確認", data: {disable_with: '儲存中...'}, class: "btn btn-primary"%>
+  </div>
