--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag search_shops_path, :method => :post do %>
+<%= form_tag search_shops_path, :method => :get do %>
   <%= text_field_tag "search", nil, placeholder: '輸入店家名稱...' %>
   <%= submit_tag "搜尋", :class => "btn btn-default" %>
 <% end %>
