初次風格設定, 主色設定
- nav美化
- 上傳nav LOGO圖
- 上傳餐點預設圖
- shop/show 店家頁面排版

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,29 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+$mainColor: #FF7676;
+$subColor: #FF8F8F;
+$mainGray: #7C7C7C;
+$subGray: #F7F7F7;
+$mainYellow: #FFC859;
+
+body{
+  color: $mainGray;
+}
+.mainColor{
+  color: $mainColor;
+}
+.mainYellow{
+  color: $mainYellow;
+}
+.navbar-fixed-top{
+  background-color: $mainColor;
+}
+.navbar-default .navbar-nav > li > a{
+  color: white;
+}
+.navbar-default .navbar-nav > li > a:hover{
+  color: white;
+  background-color: $subColor;
+}
