--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Lunttery", "#", :class => "navbar-brand" %>
+
+
+          <%= link_to "#", class: "navbar-brand" do %>
+            <%= image_tag "lunttery.png", alt:'' %>
+          <% end %>
         </div>
 
         <!-- 手機隱藏選單區 -->
